ags (0.7.122.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented non-deterministic mode
	* implemented restore and persist of AgsLv2Bridge preset
	* fixed memory leak related to AgsReturnableThread
	* fixed crash related to notation offset cached

ags (0.7.122.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* refactored ags-copy recall to instantiate like ags-buffer
	* implemented LV2 presets
	* implemented presets in AgsLv2Bridge
	* implemented ags-prepare recall
	* implemented AgsConditionManager to use with AgsThread tree lock functions
	* implemented worker threads
	* implemented destroy worker
	* improved AgsDelayAudio port instantiation to use default values
	* fixed using default values as no soundcard available
	* fixed crash as no soundcard configured within GUI
	* fixed AgsThread tree lock functions
	* added more unit tests in ags_thread_test.c

ags (0.7.122.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsHLedArray and AgsVLedArray
	* implemented missing properties of AgsPlaybackDomain and AgsPlayback
	* implemented GObject::dispose()
	* refactored AgsCellPattern and AgsPatternBox to use AgsHLedArray
	* fixed reference counting of libags, libags_audio
	* fixed division by zero caused by AgsOscillator
	* fixed serious memory corruption in ags_pattern_set_dim()
	* fixed segmentation fault of AgsFFPlayer restore
	* fixed missing connection menu of AgsLv2Bridge after restore
	* extended unit tests

ags (0.7.122.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* back-ported seemless mode of AgsDial
	* back-ported Lv2ui support
	* improved default theme
	* fixed configuration to use default values as soundcard busy
	* fixed clear configuration and provide default values as applying

ags (0.7.122.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* providing default theme
	* fixed ags.rc support
	* fixed cell pattern painting
	* minor fixes
