@@ -56,6 +56,7 @@ typedef struct _AgsLv2PluginClass AgsLv2PluginClass;
 
 typedef enum{
   AGS_LV2_PLUGIN_IS_SYNTHESIZER  = 1,
+  AGS_LV2_PLUGIN_NEEDS_WORKER    = 1 <<  1,
 }AgsLv2PluginFlags;
 
 struct _AgsLv2Plugin
